--- a/TicketSystem/WebContent/WEB-INF/web.xml
+++ b/TicketSystem/WebContent/WEB-INF/web.xml
@@ -4,9 +4,9 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	id="WebApp_ID" version="3.0">
 	<display-name>TicketSystem</display-name>
-	<welcome-file-list>
-		<welcome-file>/general/homepage.jsp</welcome-file>
-	</welcome-file-list>
+<welcome-file-list>
+<welcome-file>/general/homepage.jsp</welcome-file>
+</welcome-file-list>
 	<listener>
 		<listener-class>cinema.listeners.ContextListener</listener-class>
 	</listener>
@@ -23,18 +23,24 @@
 			<transport-guarantee>CONFIDENTIAL</transport-guarantee>
 		</user-data-constraint>
 	</security-constraint>
-	 <security-constraint>
-    <web-resource-collection>
-      <web-resource-name>Public</web-resource-name>
-      <description>Matches a few special pages.</description>
-      <url-pattern>/authentication/*</url-pattern>
-    </web-resource-collection>
-    <user-data-constraint>
-      <transport-guarantee>CONFIDENTIAL</transport-guarantee>
-    </user-data-constraint>
-  </security-constraint>
- 
-
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>Public</web-resource-name>
+			<description>Matches a few special pages.</description>
+			<url-pattern>/authentication/*</url-pattern>
+		</web-resource-collection>
+		<user-data-constraint>
+			<transport-guarantee>CONFIDENTIAL</transport-guarantee>
+		</user-data-constraint>
+	</security-constraint>
+	<security-constraint><!--Exclude css and images here -->
+		<web-resource-collection>
+			<web-resource-name>Exclude from Security</web-resource-name>
+			<url-pattern>/images/*</url-pattern>
+			<url-pattern>/css/*</url-pattern>
+			<url-pattern>/js/*</url-pattern>
+		</web-resource-collection>
+	</security-constraint>
 	<security-role>
 		<role-name>user</role-name>
 	</security-role>
@@ -42,11 +48,17 @@
 		<role-name>admin</role-name>
 	</security-role>
 
+	<resource-ref>
+		<res-ref-name>jdbc/auth</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
+
 	<login-config>
 		<auth-method>FORM</auth-method>
 		<form-login-config>
 			<form-login-page>/authentication/login1.jsp</form-login-page>
-			<form-error-page>/authentication/error.jsp</form-error-page>
+		<form-error-page>/authentication/error.jsp</form-error-page> 
 		</form-login-config>
 	</login-config>
 </web-app>
