--- a/TicketSystem/WebContent/WEB-INF/web.xml
+++ b/TicketSystem/WebContent/WEB-INF/web.xml
@@ -41,6 +41,18 @@
 			<url-pattern>/js/*</url-pattern>
 		</web-resource-collection>
 	</security-constraint>
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>Protected administration Area</web-resource-name>
+			<url-pattern>/administration/*</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>admin</role-name>
+		</auth-constraint>
+		<user-data-constraint>
+			<transport-guarantee>CONFIDENTIAL</transport-guarantee>
+		</user-data-constraint>
+	</security-constraint>
 	<security-role>
 		<role-name>user</role-name>
 	</security-role>
